tests/NormalTests/paczka1/fuzzy1/65892239.err
Error in line 5: P0O1SE S288 ]04,]
Error in line 6: lBWWmcKeX S762 46,6
Error in line 1: P0O1SE S288 80,3
Error in line 29: 6j3B7iV S288 16,2
Error in line 15: urO S191 84,8
Error in line 36: urO A729 607,1
